# life-archive-ai

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: __init__.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py  errors.py
backend/app/models/: __init__.py  transcript.py
backend/app/services/: __init__.py  transcript_loader.py
data/raw/: upload_manifest.jsonl
docs/: ARCHITECTURE.md  DATA_INPUT_RULES.md  DATA_MODEL.md  PROJECT_PLAN.md  REQUIREMENTS.md  TASK_LIST.md
frontend/: __init__.py  api_client.py  app.py
scripts/: __init__.py  inspect_data.py  run_backend.ps1  run_frontend.ps1
tests/: test_api_client.py  test_health.py  test_imports.py  test_inspect_data.py  test_transcript_loader.py
